add MediaStorageBucket export

--- a/template.yaml
+++ b/template.yaml
@@ -1396,6 +1396,8 @@ Outputs:
 
   MediaStorageBucket:
     Value: !Ref MediaStorageBucket
+    Export:
+      Name: !Sub ${AWS::StackName}-MediaStorageBucket
 
   FlowSegmentsTable:
     Value: !Ref FlowSegmentsTable
