--- a/templates/vpc.yaml
+++ b/templates/vpc.yaml
@@ -7,10 +7,6 @@ Mappings:
   SubnetConfig:
     VPC:
       CIDR: 10.0.0.0/16
-    Public0:
-      CIDR: 10.0.1.0/24
-    Public1:
-      CIDR: 10.0.2.0/24
     Private0:
       CIDR: 10.0.11.0/24
     Private1:
@@ -32,44 +28,6 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}
-
-  PublicSubnet0:
-    Type: AWS::EC2::Subnet
-    Metadata:
-      cfn_nag:
-        rules_to_suppress:
-          - id: W33
-            reason: Public Subnet
-    Properties:
-      VpcId: !Ref Vpc
-      AvailabilityZone:
-        Fn::Select:
-          - 0
-          - Fn::GetAZs: !Ref AWS::Region
-      CidrBlock: !FindInMap [SubnetConfig, Public0, CIDR]
-      MapPublicIpOnLaunch: True
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-public-0
-
-  PublicSubnet1:
-    Type: AWS::EC2::Subnet
-    Metadata:
-      cfn_nag:
-        rules_to_suppress:
-          - id: W33
-            reason: Public Subnet
-    Properties:
-      VpcId: !Ref Vpc
-      AvailabilityZone:
-        Fn::Select:
-          - 1
-          - Fn::GetAZs: !Ref AWS::Region
-      CidrBlock: !FindInMap [SubnetConfig, Public1, CIDR]
-      MapPublicIpOnLaunch: True
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-public-1
 
   PrivateSubnet0:
     Type: AWS::EC2::Subnet
@@ -99,81 +57,6 @@ Resources:
         - Key: Name
           Value: !Sub ${AWS::StackName}-private-1
 
-  InternetGateway:
-    Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-public-0
-
-  GatewayToInternet:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties:
-      VpcId: !Ref Vpc
-      InternetGatewayId: !Ref InternetGateway
-
-  PublicRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref Vpc
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-public
-
-  PublicRoute:
-    Type: AWS::EC2::Route
-    DependsOn: GatewayToInternet
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref InternetGateway
-
-  PublicSubnetRouteTableAssociation0:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet0
-      RouteTableId: !Ref PublicRouteTable
-
-  PublicSubnetRouteTableAssociation1:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet1
-      RouteTableId: !Ref PublicRouteTable
-
-  ElasticIP0:
-    Type: AWS::EC2::EIP
-    Properties:
-      Domain: vpc
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-0
-
-  ElasticIP1:
-    Type: AWS::EC2::EIP
-    Properties:
-      Domain: vpc
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-1
-
-  NATGateway0:
-    Type: AWS::EC2::NatGateway
-    Properties:
-      AllocationId: !GetAtt ElasticIP0.AllocationId
-      SubnetId: !Ref PublicSubnet0
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-0
-
-  NATGateway1:
-    Type: AWS::EC2::NatGateway
-    Properties:
-      AllocationId: !GetAtt ElasticIP1.AllocationId
-      SubnetId: !Ref PublicSubnet1
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-1
-
   PrivateRouteTable0:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -189,20 +72,6 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-private-1
-
-  PrivateRouteToInternet0:
-    Type: AWS::EC2::Route
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable0
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref NATGateway0
-
-  PrivateRouteToInternet1:
-    Type: AWS::EC2::Route
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable1
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref NATGateway1
 
   PrivateSubnetRouteTableAssociation0:
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -222,7 +91,6 @@ Resources:
       VpcId: !Ref Vpc
       ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
       RouteTableIds:
-        - !Ref PublicRouteTable
         - !Ref PrivateRouteTable0
         - !Ref PrivateRouteTable1
 
@@ -232,9 +100,83 @@ Resources:
       VpcId: !Ref Vpc
       ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
       RouteTableIds:
-        - !Ref PublicRouteTable
         - !Ref PrivateRouteTable0
         - !Ref PrivateRouteTable1
+
+  EndpointSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+        - id: W9
+          reason: VPC cidr only
+        - id: W29
+          reason: Not relevant.
+    Properties:
+      VpcId: !Ref Vpc
+      GroupDescription: Endpoints
+      SecurityGroupEgress:
+        - CidrIp: 127.0.0.1/32
+          Description: Disallow all traffic
+          IpProtocol: "-1"
+      SecurityGroupIngress:
+        - CidrIp: !FindInMap [SubnetConfig,  VPC, CIDR]
+          Description: https only inbound
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+
+  SqsEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.sqs
+      VpcId: !Ref Vpc
+      VpcEndpointType: Interface
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref EndpointSecurityGroup
+      SubnetIds:
+        - !Ref PrivateSubnet0
+        - !Ref PrivateSubnet1
+
+  EventsEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.events
+      VpcId: !Ref Vpc
+      VpcEndpointType: Interface
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref EndpointSecurityGroup
+      SubnetIds:
+        - !Ref PrivateSubnet0
+        - !Ref PrivateSubnet1
+
+  SsmEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
+      VpcId: !Ref Vpc
+      VpcEndpointType: Interface
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref EndpointSecurityGroup
+      SubnetIds:
+        - !Ref PrivateSubnet0
+        - !Ref PrivateSubnet1
+
+  LambdaEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.lambda
+      VpcId: !Ref Vpc
+      VpcEndpointType: Interface
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref EndpointSecurityGroup
+      SubnetIds:
+        - !Ref PrivateSubnet0
+        - !Ref PrivateSubnet1
 
 Outputs:
 
