simplified pytest marks

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,6 @@
 [pytest]
 markers =
-    no_auth:  Test behaviour when no auth header is supplied
-    service:  Test Service API Endpoint resources and methods
-    sources:  Test Sources API Endpoint resources and methods
-    flows:    Test Flows API Endpoint resources and methods
-    segments: Test FlowSegments API Endpoint resources and methods
-    storage:  Test MediaStorage API Endpoint resources and methods
-    delete:   Test FlowDeleteRequests API Endpoint resources and methods
+    acceptance: marks tests as acceptance tests
 
 testpaths = tests/acceptance
 pythonpath = functions layers/utils
