--- a/template.yaml
+++ b/template.yaml
@@ -259,6 +259,33 @@ Resources:
             ProjectionType: KEYS_ONLY
     Condition: SupportWebhooks
 
+  FlowStorageTable:
+    DeletionPolicy: RetainExceptOnCreate
+    UpdateReplacePolicy: Retain
+    Type: AWS::DynamoDB::Table
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W74
+            reason: Encryption not required
+          - id: W78
+            reason: Backup not required
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: object_id
+          AttributeType: S
+        - AttributeName: flow_id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: object_id
+          KeyType: HASH
+        - AttributeName: flow_id
+          KeyType: RANGE
+      TimeToLiveSpecification:
+        AttributeName: expire_at
+        Enabled: true
+
   MediaStorageBucket:
     DeletionPolicy: RetainExceptOnCreate
     UpdateReplacePolicy: Retain
@@ -823,6 +850,7 @@ Resources:
           NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
           EVENT_BUS: !Ref EventBus
           SEGMENTS_TABLE: !Ref FlowSegmentsTable
+          STORAGE_TABLE: !Ref FlowStorageTable
           COGNITO_LAMBDA_NAME: !Ref CognitoUtilsFunction
           BUCKET: !Ref MediaStorageBucket
           DELETE_QUEUE_URL: !Ref DeleteRequestQueue
@@ -842,6 +870,11 @@ Resources:
                 - dynamodb:Query
               Resource:
                 - !GetAtt FlowSegmentsTable.Arn
+            - Effect: Allow
+              Action:
+                - dynamodb:PutItem
+              Resource:
+                - !GetAtt FlowStorageTable.Arn
             - Effect: Allow
               Action:
                 - s3:PutObject
@@ -1282,6 +1315,7 @@ Resources:
           NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
           EVENT_BUS: !Ref EventBus
           SEGMENTS_TABLE: !Ref FlowSegmentsTable
+          STORAGE_TABLE: !Ref FlowStorageTable
           BUCKET: !Ref MediaStorageBucket
           BUCKET_REGION: !Ref AWS::Region
           S3_QUEUE_URL: !Ref CleanupS3Queue
@@ -1309,6 +1343,12 @@ Resources:
                 - !Sub ${FlowSegmentsTable.Arn}/index/object-id-index
             - Effect: Allow
               Action:
+                - dynamodb:Query
+                - dynamodb:UpdateItem
+              Resource:
+                - !GetAtt FlowStorageTable.Arn
+            - Effect: Allow
+              Action:
                 - sqs:SendMessage
               Resource:
                 - !GetAtt DeleteRequestQueue.Arn
@@ -1316,8 +1356,6 @@ Resources:
             - Effect: Allow
               Action:
                 - s3:GetObject
-                - s3:GetObjectTagging
-                - s3:PutObjectTagging
               Resource:
                 - !Sub ${MediaStorageBucket.Arn}/*
             - Effect: Allow
@@ -1402,6 +1440,7 @@ Resources:
           POWERTOOLS_METRICS_NAMESPACE: TAMS
           NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
           SEGMENTS_TABLE: !Ref FlowSegmentsTable
+          STORAGE_TABLE: !Ref FlowStorageTable
           BUCKET: !Ref MediaStorageBucket
       Policies:
         - Version: "2012-10-17"
@@ -1411,11 +1450,7 @@ Resources:
                 - dynamodb:Query
               Resource:
                 - !Sub ${FlowSegmentsTable.Arn}/index/object-id-index
-            - Effect: Allow
-              Action:
-                - s3:GetObjectTagging
-              Resource:
-                - !Sub ${MediaStorageBucket.Arn}/*
+                - !GetAtt FlowStorageTable.Arn
       Events:
         headMediaObjectInformation:
           Type: Api
@@ -1691,6 +1726,7 @@ Resources:
           POWERTOOLS_METRICS_NAMESPACE: TAMS
           NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
           SEGMENTS_TABLE: !Ref FlowSegmentsTable
+          STORAGE_TABLE: !Ref FlowStorageTable
           BUCKET: !Ref MediaStorageBucket
       Policies:
         - Version: "2012-10-17"
@@ -1700,6 +1736,11 @@ Resources:
                 - dynamodb:Query
               Resource:
                 - !Sub ${FlowSegmentsTable.Arn}/index/object-id-index
+            - Effect: Allow
+              Action:
+                - dynamodb:DeleteItem
+              Resource:
+                - !GetAtt FlowStorageTable.Arn
             - Effect: Allow
               Action:
                 - s3:DeleteObject
